# Heta

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  config.example.zh.yaml  docker-compose.yml  heta-promo.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml
docs/: demo.md  demo.zh.md  faq.md  faq.zh.md  index.md  index.zh.md
docs/hetadb/: index.md  index.zh.md  ingest.md  ingest.zh.md  query-modes.md  query-modes.zh.md
docs/hetagen/: index.md  index.zh.md
docs/hetamem/: index.md  index.zh.md  memorykb.md  memorykb.zh.md  memoryvg.md  memoryvg.zh.md  querying-skill.md  querying-skill.zh.md
docs/quick-start/: docker.md  docker.zh.md  manual.md  manual.zh.md  mcp-clients.md  mcp-clients.zh.md
docs/reference/: api.md  api.zh.md  changelog.md  changelog.zh.md  config.md  config.zh.md
docs/stylesheets/: extra.css
heta-frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json
heta-frontend/src/: App.module.css  App.tsx
heta-frontend/src/api/: client.ts  endpoints.ts
heta-frontend/src/api/services/: chat.ts  dataset.ts  kb.ts
heta-frontend/src/components/layout/: PageShell.module.css  PageShell.tsx  Sidebar.module.css  Sidebar.tsx
heta-frontend/src/components/ui/: Button.module.css  Button.tsx  Dropdown.module.css  Dropdown.tsx  Modal.module.css  Modal.tsx
heta-frontend/src/config/: index.ts
heta-frontend/src/hooks/: useDataset.ts  useKnowledgeBase.ts
heta-frontend/src/pages/Chat/: Chat.module.css  index.tsx
heta-frontend/src/pages/Dataset/: index.tsx
heta-frontend/src/pages/HetaGen/: HetaGen.module.css  index.tsx
heta-frontend/src/pages/HetaMem/: HetaMem.module.css  index.tsx
heta-frontend/src/pages/KnowledgeBase/: KnowledgeBase.module.css  index.tsx
heta-frontend/src/pages/Tasks/: Tasks.module.css  index.tsx
heta-frontend/src/styles/: global.css  tokens.css
heta-frontend/src/types/: index.ts
skills/querying-knowledge-and-memory/: SKILL.md  hetadb-api.md  hetamem-api.md
src/: main.py
src/common/config/: __init__.py  log_config.py  persistence.py
src/common/llm_client/: __init__.py  client.py
src/common/tasks/: __init__.py  task_store.py
src/hetadb/api/: main.py
src/hetadb/api/routers/: __init__.py  chat.py  config.py  files.py  schema.py
src/hetadb/config/: db_config.yaml  log_config.py
src/hetadb/config/prompt/: kg_prompt.yaml  (+1 more)
src/hetadb/core/: chat_processor.py  config_processor.py  file_processor.py  mode_registry.py
src/hetadb/mcp/: __init__.py  server.py
src/hetadb/utils/: file_url.py  hash_filename.py  load_config.py  path.py  schema.py  utils.py
src/hetagen/api/: main.py
src/hetagen/core/: tag_tree_parser.py
src/hetagen/utils/: path.py
src/hetamem/: README.md  __init__.py  demo_kb.py  demo_vg.py  memkb_manager.py  memvg_manager.py
src/hetamem/MemoryKB/: build_memory.py  orchestrator.py
src/hetamem/MemoryVG/: __init__.py
src/hetamem/api/: main.py
src/hetamem/config/: __init__.py  log_config.py
src/hetamem/docker/: README.md  docker-compose.yml
src/hetamem/mcp/: __init__.py  server.py
src/hetamem/utils/: __init__.py  path.py
tests/eval/: ground_truth.yaml  run_eval.py
(+144 files in other folders)
